# dirtysocks

./: .devcontainer.json  .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  wgcf-account.toml  wgcf-profile.conf
dirtysocks/: Cargo.toml
dirtysocks-bin/: Cargo.toml
dirtysocks-bin/src/: cli.rs  conf.rs  main.rs
dirtysocks/src/: lib.rs  wg.rs
src/: handler.rs  lib.rs  main.rs  wg.rs
