[package]
name = "dirtysocks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", default-features = false, features = [
    "net",
    "macros",
    "sync",
    "rt-multi-thread",
] }
hickory-resolver = "0.24.1"
strum = { version = "0.26.2", features = ["derive"] }
untrusted = "0.9.0"
boringtun = "0.6.0"
seq-macro = "0.3.5"
tracing = "0.1.40"
thiserror = "1.0.56"
smallvec = { version = "1.13.2", features = ["union"] }
smoltcp = "0.11.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
base64 = "0.22.1"
crossbeam-queue = "0.3.11"
deadqueue = { version = "0.2.4", default-features = false, features = [
    "unlimited",
] }
rand = "0.8.5"
futures = "0.3.30"
