[package]
name = "dirtysocks-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
base64 = "0.22.1"
dirtysocks = { path = "../dirtysocks" }
clap = { version = "4.5.20", features = ["derive"] }
tracing = "0.1.40"
smoltcp = "0.11.0"
tokio = { version = "1.41.0", features = ["fs"] }
hickory-resolver = "0.24.1"
boringtun = "0.6.0"
heapless = "0.8.0"
color-eyre = "0.6.3"
rust-ini = "0.21.1"

